--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 group 'com.devtography'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
+apply plugin: 'java-library'
 
 sourceCompatibility = 1.8
 
