Fixed annotation dependency
Replace com.sun.istack.internal.Nullable with Jetbrains annotations library.

--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,13 @@ repositories {
 }
 
 dependencies {
+    compile 'org.jetbrains:annotations:15.0'
     testCompile 'junit:junit:4.12'
+}
+
+jar {
+    manifest {
+        attributes('Implementation-Title': project.name,
+                'Implementation-Version': project.version)
+    }
 }
