--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-# Modify by Wing Chau for gradle project
+# Modify by Wing Chau for gradle project & VSCode
 
 .idea/
 *.iml
@@ -53,3 +53,11 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+
+# VSCode
+bin/
+.classpath
+.project
+.settings/
+.vscode/
